# software-anc

./: local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  softwareanc.cpp  softwareanc.h
app/src/main/java/com/ac/softwareanc/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-ru/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
